# Compiler

./: CMakeLists.txt  Compile.cpp  Compile.h  README.md  Requirement.md  a.cpp  a.h  main.cpp
CodeGeneration/: A.cpp  A.h  APIOfcodegeneration.cpp  APIOfcodegeneration.h  CMakeLists.txt  HelperFunction.cpp  HelperFunction.h  INT.h  IR_Transform.cpp  IR_Transform.h
CodeGeneration/Source/: LLVM_Part.cpp
CodeGeneration/Test/: CMakeLists.txt  a.cpp  a.h
CodeGeneration/header/: BlockTree.h  LLVM_Part.h
IR/: IRGeneration.cpp  IRGeneration.h  codegen.cpp  codegen.h
Lexical/: APIOfLexical.cpp  APIOfLexical.h  CMakeLists.txt  README.md  tem.cpp  tem.h
Lexical/Test/: CMakeLists.txt  TestForGetTokens.cpp  a.cpp  a.h  source1.cpp  source2.cpp  source3.cpp
Semantic/: APIOfSemantic.cpp  APIOfSemantic.h  Analysis.cpp  Analysis.h  CMakeLists.txt
Semantic/Source/: AnalysisAST.cpp  Scope.cpp  Symbol.cpp  SymbolTable.cpp
Semantic/Test/: CMakeLists.txt  a.cpp
Semantic/header/: AnalysisAST.h  Scope.h  Symbol.h  SymbolTable.h
Syntax/: APIOfSemantic.cpp  APIOfSemantic.h  APIOfSyntax.cpp  APIOfSyntax.h  CMakeLists.txt  StructureOfAst.md  VistorAST.cpp  VistorAST.h  tem.cpp  tem.h
Syntax/Source/: ASTnode.cpp  BreakStmt.cpp  ConstructAST.cpp  ContinueStmt.cpp  Declaration.cpp  ForStmt.cpp  HelperFunction.cpp  IFStmt.cpp  LValue.cpp  Type.cpp  WhileStmt.cpp  module.cpp  statement.cpp
Syntax/Source/Declaration/: ConstDecl.cpp  ConstDef.cpp  Decl.cpp  FunctionDec.cpp  VarDec.cpp  VarDecl.cpp  VarDef.cpp
Syntax/Source/Type/: BoolLiteral.cpp  CharLiteral.cpp  Constvalue.cpp  FloatLiteral.cpp  FunctionType.cpp  IntegerLiteral.cpp  TypedefDecl.cpp  Valueliteral.cpp
Syntax/Source/statement/: AddExp.cpp  AssignStmt.cpp  BinaryOperator.cpp  EXP.cpp  EqExp.cpp  Expression.cpp  LAndExp.cpp  LOrExp.cpp  MulExp.cpp  Number.cpp  PrimaryExp.cpp  RelExp.cpp  ReturnStmt.cpp  Stmt.cpp  UnaryExp.cpp  UnaryOp.cpp  compoundstmt.cpp  expression.cpp  singlestmt.cpp
Syntax/Test/: CMakeLists.txt  TestHelper.cpp  TestHelper.h  a.cpp
Syntax/header/: ALLHEADER.h  ASTnode.h  ConstructAST.h  Declaration.h  HelperFunction.h  Type.h  module.h  statement.h
Syntax/header /: Declaration.h  Type.h  module.h  statement.h
Syntax/header /Declaration/: VarDec.h
Syntax/header /Type/: TypedefDecl.h
Syntax/header /statement/: AssignStmt.h  compoundstmt.h
Syntax/header/Declaration/: ConstDecl.h  ConstDef.h  Decl.h  FunctionDec.h  FunctionParameters.h  StructBody.h  StructDecl.h  VarDec.h  VarDecl.h  VarDef.h
Syntax/header/Type/: BoolLiteral.h  CharLiteral.h  Constvalue.h  FloatLiteral.h  FunctionType.h  IntegerLiteral.h  LValue.h  TypedefDecl.h
Syntax/header/statement/: AddExp.h  AssignStmt.h  BinaryOperator.h  BreakStmt.h  ContinueStmt.h  EXP.h  EqExp.h  Expression.h  ForStmt.h  IFStmt.h  LAndExp.h  LOrExp.h  MulExp.h  Number.cpp  Number.h  PrimaryExp.cpp  PrimaryExp.h  RelExp.h  ReturnStmt.h  Stmt.h  UnaryExp.h  UnaryOp.cpp  UnaryOp.h  WhileStmt.h  compoundstmt.h  expression.h  singlestmt.h
Test/: ForStmt.cpp  Functioncall.cpp  IDEN.cpp  Var.cpp  inlcude.cpp  return.cpp  scope.cpp  source1.cpp  source2.cpp  source3.cpp  source3.h  source4.cpp  source5.cpp  struct.cpp
